Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.18
-
Component/s: mariabackup, Plugin - AWS key management, Tests
-
Labels:None
Description
mariabackup.xb_aws_key_management w2 [ fail ]
|
Test ended at 2018-03-26 15:08:11
|
|
CURRENT_TEST: mariabackup.xb_aws_key_management
|
mysqltest: At line 13: exec of '/usr/bin/mariabackup --defaults-file=/dev/shm/var/2/my.cnf --backup --target-dir=/dev/shm/var/2/tmp/backup 2>&1' failed, error: 256, status: 1, errno: 11
|
Output from before failure:
|
180326 15:08:11 Connecting to MySQL server host: localhost, user: root, password: set, port: 16000, socket: /dev/shm/var/tmp/2/mysqld.1.sock
|
Using server version 10.2.14-MariaDB-debug-log
|
Loading encryption plugin
|
Encryption plugin parameter : '--aws_key_management_key_spec=AES_128'
|
Encryption plugin parameter : '--aws_key_management_log_level=Off'
|
Encryption plugin parameter : '--aws_key_management_master_key_id='
|
Encryption plugin parameter : '--aws_key_management_mock=ON'
|
Encryption plugin parameter : '--aws_key_management_region='
|
Encryption plugin parameter : '--aws_key_management_request_timeout=0'
|
Encryption plugin parameter : '--aws_key_management_rotate_key=0'
|
/usr/bin/mariabackup based on MariaDB server 10.2.14-MariaDB Linux (x86_64)
|
mariabackup: uses posix_fadvise().
|
mariabackup: cd to /dev/shm/var/2/mysqld.1/data/
|
mariabackup: open files limit requested 1024, set to 1024
|
mariabackup: using the following InnoDB configuration:
|
mariabackup: innodb_data_home_dir = .
|
mariabackup: innodb_data_file_path = ibdata1:12M:autoextend
|
mariabackup: innodb_log_group_home_dir = ./
|
2018-03-26 15:08:11 139933970843776 [Note] InnoDB: Number of pools: 1
|
mariabackup: Generating a list of tablespaces
|
2018-03-26 15:08:11 139933970843776 [Warning] InnoDB: Allocated tablespace ID 1 for mysql/innodb_table_stats, old maximum was 0
|
/usr/bin/mariabackup: AWS KMS plugin: Can't create file aws-kms-key.1.1
|
2018-03-26 15:08:11 139933970843776 [ERROR] InnoDB: ############### CORRUPT LOG RECORD FOUND ##################
|
2018-03-26 15:08:11 139933970843776 [Note] InnoDB: Log record type 100, page 4:0. Log parsing proceeded successfully up to 1633854. Previous log record type 1, is multi 1 Recv offset 554, prev 548
|
2018-03-26 15:08:11 139933970843776 [Note] InnoDB: Hex dump starting 100 bytes before and ending 100 bytes after the corrupted record:
|
len 206; hex 9ef0ffffffff02040000a20004040000a4f0ffffffff02040000a800040400004e01040400003a021e040028bc0006730e0c52457401040028c20101040028c3101e040028c40010f4d0c3bb49846e829bfe0a53cc37e51d04040028d40104040028d80101040028dc016404000000000428bc0110000000010000000101f4d0c3bb49846e829bfe0a53cc37e51d1f180081350000000502020081350028811002008135002a8110020081350068811001008135006b0108008135006c00000000131f94008135000a0b00010674; asc N : ( s REt ( ( ( I n S 7 ( ( ( d ( I n S 7 5 5 ( 5 * 5 h 5 k 5 l 5 t;
|
2018-03-26 15:08:11 139933970843776 [Note] InnoDB: Set innodb_force_recovery to ignore this error.
|
mariabackup: copying the log failed
|
mariabackup: Error: xtrabackup_copy_logfile() failed.
|
|
|
|
The result from queries just before the failure was:
|
CREATE TABLE t(c VARCHAR(10)) ENGINE INNODB encrypted=yes;
|
Warnings:
|
Note 1105 AWS KMS plugin: generated encrypted datakey for key id=1, version=1
|
Note 1105 AWS KMS plugin: loaded key 1, version 1, key length 128 bit
|
INSERT INTO t VALUES('foobar1');
|
# xtrabackup backup
|
|
- skipping '/dev/shm/var/2/log/mariabackup.xb_aws_key_management/'
|
|
Retrying test mariabackup.xb_aws_key_management, attempt(2/3)...
|